--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <label class="form__footer">
                   <input type="checkbox" class="me-10px mt-5px" />
 
-                  <p>
+                  <span>
                     <small>
                       By submitting the application, you agree to be contacted with the information stated above. Your
                       application is 100% confidential. Businesses running for at least 6 months may apply.
                     </small>
-                  </p>
+                  </span>
                 </label>
 
                 <button class="form__submit button button--lg" type="submit">Apply Now</button>
@@ -334,6 +334,191 @@
         </div>
       </section>
       <!-- SECTION SERVICES END -->
+
+      <!-- SECTION STATS -->
+      <section class="section section-stats bg-gray">
+        <div class="container">
+          <div class="row gy-50px">
+            <div class="col-md-6">
+              <h2 class="heading-secondary">
+                Increase Your Business Cashflow With Our Personalized Financial Solutions
+              </h2>
+            </div>
+            <div class="col-md-6">
+              <div class="row gy-50px">
+                <div class="col-6">
+                  <figure class="stat-card">
+                    <div class="stat-card__icon mb-20px mb-md-30px">
+                      <img class="" src="images/svg/icon-hours.svg" alt="" />
+                    </div>
+                    <figcaption>
+                      <h4 class="stat-card__heading"><span class="text-primary">24</span> Hours</h4>
+                      <p class="mt-5px">
+                        the time you need to apply <br class="d-none d-lg-block" />
+                        and get your cashflow up
+                      </p>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <div class="col-6">
+                  <figure class="stat-card">
+                    <div class="stat-card__icon mb-20px mb-md-30px">
+                      <img class="" src="images/svg/icon-million.svg" alt="" />
+                    </div>
+                    <figcaption>
+                      <h4 class="stat-card__heading"><span class="text-primary">20.5</span> Million</h4>
+                      <p class="mt-5px">loan amount granted as of now</p>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <div class="col-6">
+                  <figure class="stat-card">
+                    <div class="stat-card__icon mb-20px mb-md-30px">
+                      <img class="" src="images/svg/icon-industries.svg" alt="" />
+                    </div>
+                    <figcaption>
+                      <h4 class="stat-card__heading"><span class="text-primary">21</span> Industries</h4>
+                      <p class="mt-5px">with more to come</p>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <div class="col-6">
+                  <figure class="stat-card">
+                    <div class="stat-card__icon mb-20px mb-md-30px">
+                      <img class="" src="images/svg/icon-calendar.svg" alt="" />
+                    </div>
+                    <figcaption>
+                      <h4 class="stat-card__heading"><span class="text-primary">2</span> Years</h4>
+                      <p class="mt-5px">
+                        of exponential growth and <br class="d-none d-lg-block" />
+                        tapping on potential
+                      </p>
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION STATS END -->
+
+      <!-- SECTION FAQ -->
+      <section class="section text-center">
+        <div class="container">
+          <h2 class="heading-secondary">Frequently Asked Questions (FAQs)</h2>
+          <p class="mt-5px text-lg">Find the answers to your questions here.</p>
+
+          <div class="accordions mt-44px">
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">
+                  What documents do I need to prepare for my business loan application?
+                </h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>Here’s what we need:</p>
+                <ul>
+                  <li>• Your company’s BizFile (ACRA)</li>
+                  <li>• Your company’s supporting documents</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">How much will my company be able to loan?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>
+                  Never let the lack of funding hold you back again. MPM Capital provides business loans between $20,000
+                  to $2 million.
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">What are the interest rates?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>
+                  The interest rate depends on your company profile, the loan plan you subscribe to and the risk
+                  assessment.
+                </p>
+                <p>
+                  You may apply for a zero obligation loan assessment within minutes, and we will reply to you within 24
+                  hours.
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">How fast can I receive the cash?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>You will be able to receive your money once your business loan is approved.</p>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">How do I apply for a business loan in Singapore?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>
+                  MPM Capital offers quick business funding for all industries in Singapore. <br />
+                  <br />
+                  By digitalizing the loan process, precious time is saved for our entrepreneurs so that they can focus
+                  on managing their business. You can apply here "link".
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">What makes MPM Capital different?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>
+                  MPM Capital is one of the most reliable financial institutions in Singapore. Other than offering large
+                  business loans up to $2 million, we have digitalized the loan application process to speed things up.
+                  <br /><br />
+                  Our team consists of experienced financial analysts and entrepreneurs. This means that we understand
+                  how precious time is. We hope to assist all businessmen in Singapore to reach their goals quickly and
+                  efficiently.
+                  <br /><br />
+                  All of our business loans are catered to their respective industries.
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion">
+              <div class="accordion__header">
+                <h4 class="accordion__heading">What if I have a poor credit score? Can I still apply for a loan?</h4>
+              </div>
+
+              <div class="accordion__body">
+                <p>
+                  Yes. Not to worry, MPM Capital aims to help all our clients regardless of their credit scores. We
+                  currently do not have specific restrictions to credit scores.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION FAQ END -->
     </main>
 
     <!-- SCRIPTS -->
