--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 
+    <link rel="stylesheet" href="css/swiper.min.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -519,9 +520,216 @@
         </div>
       </section>
       <!-- SECTION FAQ END -->
+
+      <!-- SECTION REVIEWS -->
+      <section class="section bg-gray text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <h2 class="heading-secondary">Reviews from our valued customers</h2>
+              <p class="mt-14px mt-md-12px text-lg">
+                Throughout the years, we have provided exceptional service to our clients. We do not just provide
+                business loans, but we also aim to build lasting relationships with our valued customers.
+              </p>
+            </div>
+          </div>
+
+          <div class="mt-4">
+            <!-- Slider main container -->
+            <div class="swiper-container reviews-swiper">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slide -->
+                <div class="swiper-slide">
+                  <div class="review-card">
+                    <div class="review-card__stars mb-20px">
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                    </div>
+
+                    <p class="review-card__text mb-44px">
+                      Submitted my loan application and was contacted by James in less than an hour! Impressed by their
+                      speed. In total, I received my funds within the day, thumbs up to the team at MPM Capital!
+                    </p>
+
+                    <div class="review-card__author">
+                      <div class="review-card__author-img me-10px">
+                        <img src="images/user-1.png" alt="" />
+                      </div>
+
+                      <p class="review-card__author-name">Lauren Tang</p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Slide -->
+                <div class="swiper-slide">
+                  <div class="review-card">
+                    <div class="review-card__stars mb-20px">
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                    </div>
+
+                    <p class="review-card__text mb-44px">
+                      Business hasn’t been the best during this period. Was in search of a business loan to help with
+                      some cash flow issues. Thankfully MPM Capital managed to help me secure a business loan and help
+                      turn my business around. Thank you!
+                    </p>
+
+                    <div class="review-card__author">
+                      <div class="review-card__author-img me-10px">
+                        <img src="images/user-2.png" alt="" />
+                      </div>
+
+                      <p class="review-card__author-name">Marcus Wong</p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Slide -->
+                <div class="swiper-slide">
+                  <div class="review-card">
+                    <div class="review-card__stars mb-20px">
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                      <img src="images/svg/star.svg" alt="" />
+                    </div>
+
+                    <p class="review-card__text mb-44px">
+                      MPM Capital provided me with the necessary help along the way. The loan application was fast and
+                      hassle-free. Excellent customer service from James as well. Thanks for providing me with a
+                      business loan within such short notice!
+                    </p>
+
+                    <div class="review-card__author">
+                      <div class="review-card__author-img me-10px">
+                        <img src="images/user-2.png" alt="" />
+                      </div>
+
+                      <p class="review-card__author-name">Lee Teng Siew</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- If we need pagination -->
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <a class="text-dark mt-40px d-inline-block" href="#"
+            >View all <span class="text-primary fw-bold">Google Reviews >></span></a
+          >
+        </div>
+      </section>
+      <!-- SECTION REVIEWS END -->
+
+      <!-- SECTION FORM -->
+      <section class="section-form bg-secondary">
+        <div class="container">
+          <div class="row gy-42px justify-content-between align-items-center">
+            <div class="col-md-6 col-lg-5 order-md-2">
+              <h2 class="heading-secondary text-white">
+                Easy loan approvals, <br />
+                quick online application.
+              </h2>
+
+              <p class="text-lg text-gray mt-10px mt-md-18px">
+                With our competitive rates, let us reach greater heights together.
+              </p>
+            </div>
+            <div class="col-md-6 order-md-1">
+              <div class="form-card">
+                <h3 class="form-card__heading text-secondary">Receive Your Business Loan In Minutes!</h3>
+
+                <form class="form mt-20px">
+                  <div class="form__group">
+                    <label class="form__item">
+                      <span class="form__label">Company Name</span>
+                      <input type="text" class="form__input" />
+                    </label>
+
+                    <label class="form__item">
+                      <span class="form__label">Your Full Name</span>
+                      <input type="text" class="form__input" />
+                    </label>
+                  </div>
+
+                  <div class="form__group">
+                    <label class="form__item">
+                      <span class="form__label">Contact Number</span>
+                      <input type="text" class="form__input" />
+                    </label>
+
+                    <label class="form__item">
+                      <span class="form__label">Email Address</span>
+                      <input type="text" class="form__input" />
+                    </label>
+                  </div>
+
+                  <label class="form__item">
+                    <span class="form__label">Required Business Capital</span>
+                    <input type="text" class="form__input" />
+                  </label>
+
+                  <label class="form__footer">
+                    <input type="checkbox" class="me-10px mt-5px" />
+
+                    <span>
+                      <small>
+                        By submitting the application, you agree to be contacted with the information stated above. Your
+                        application is 100% confidential. Businesses running for at least 6 months may apply.
+                      </small>
+                    </span>
+                  </label>
+
+                  <button class="form__submit button button--lg" type="submit">Apply Now</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION FORM END -->
     </main>
 
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__main text-center">
+          <img class="footer__logo" src="images/svg/logo.svg" alt="" />
+
+          <ul class="text-dark mt-20px">
+            <li>MPM CAPITAL PTE. LTD.</li>
+            <li>10 Anson Road, #10-11, International Plaza,</li>
+            <li>Singapore 079903</li>
+          </ul>
+
+          <ul class="text-dark mt-20px fw-bold">
+            <li>Whatsapp / Tel: <a href="tel:+65 8873 9263" class="text-secondary">+65 8873 9263</a></li>
+            <li>
+              Email:
+              <a href="mailto:enquiry@mpmcapital.com.sg" class="text-secondary">enquiry@mpmcapital.com.sg</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__copy text-center">
+        <p>Copyright © 2021 MPM Capital Pte Ltd. All Rights Reserved. Co. Reg. No. 201735761N.</p>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
+
     <!-- SCRIPTS -->
+    <script src="js/swiper.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
